# real_c_string

./: Cargo.toml  README.md
src/: lib.rs
