[package]
name = "real_c_string"
version = "0.1.1"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"
description = "Generate string parseable in compiled binary"
license = "MIT"

[dependencies]
proc-macro2 = "0.4.30"
proc-macro-hack = "0.5.11"
syn = "0.15.42"
quote = "0.6.13"

[lib]
proc-macro = true